--- a/school.html
+++ b/school.html
@@ -94,8 +94,8 @@
         <li><img class="am-circle am-fr" src="buptYB/i/BUPT1.png" /></li>
         <li><img class="am-fl" src="buptYB/i/BUPT2.png" /></li>
       </ul>
-      <li>北邮校风：团结勤奋 严谨创新 </li>
-      <li>北邮校训：厚德、博学、敬业、乐群</li>
+      <li>北邮校风：团结勤奋 严谨创新</li>
+      <li>北邮校训：厚德博学 敬业乐群</li>
       <li>北邮精神：崇尚奉献 追求卓越</li>
   		<h1>二、校区简介</h1>
       <h2>西土城校区</h2>
