little style changes

--- a/note.html
+++ b/note.html
@@ -85,7 +85,7 @@
 <div id="the-box">
 	<div class="my-article am-article">
 	 <div class="am-article-bd">
-		<h1>北京邮电大学2016级本科新生入学须知</h1>
+         <h1 style="text-align: center;">北京邮电大学<br>2016级本科新生入学须知</h1>
     <h4>新同学，欢迎你！
 祝贺你被我校录取，为方便你顺利入学，现将有关事项说明如下：
 </h4>
