--- a/safe.html
+++ b/safe.html
@@ -86,7 +86,7 @@
 
 	<div class="my-article am-article">
 	 <div class="am-article-bd">
-		<h1>新生入学教育</h1>
+		<h1 style="text-align: center;">新生入学教育</h1>
 		<p>入学以后，大家自然会遇到各种奇怪的事情和一些不良的诱惑，所以在此我们为大家列举了几种常见的危害，希望大家能够在生活和学习中防范周围，保护自己的人生安全。</p>
 		<h2>禁毒品</h2>
 		<p><strong>想必大家都看过《余罪》了，剧中为了能够打击贩毒团伙，余罪和他的小伙伴们不惜牺牲自己的生命，可见毒品对我们的危害有多大，所以呢，我们再次普及一下有关于毒品的知识。</strong></p>
